--- a/branch1.html
+++ b/branch1.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Branch HTML Page.</title>
+    <title>Branch1</title>
 </head>
 <body>
-    <h1>This is the Master page.</h1>
-    <h2>Hello, Welcome to Master branch.</h2>
+    <h1>Branch1 HTML Page</h1>
 </body>
 </html>
