masterBranch.html file is added to Master branch

--- a/masterBranch.html
+++ b/masterBranch.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Branch1</title>
+    <title>Master Branch HTML Page.</title>
 </head>
 <body>
-    <h1>Branch1 HTML Page</h1>
+    <h1>This is the Master page.</h1>
+    <h2>Hello, Welcome to Master branch.</h2>
 </body>
 </html>
